@@ -34,6 +34,10 @@ Changes Since 0.14
 
   - Fix [ 281 ] Remove escaping backslashes in meta directive content.
 
+* docutils/parsers/rst/directives/tables.py:
+
+  - Apply [ 121 ] Add a :width: option for the table directives.
+
 * docutils/transforms/frontmatter.py
 
   - Add field name as class argument to generic docinfo fields unconditionally.
